# Dragon23

./: .gitignore  CMakeLists.txt  README.md  macrodefs.txt
DragonGraph/: CMakeLists.txt  Namespace.hpp  Node.hpp
DragonGraph/example/: main.cpp
cmake/: FindMaya.cmake
data/: adnan_gon.txt  belt.txt  belt2.txt  bolt_gon.txt  bunny.txt  cone_data.txt  cube_data.txt  helix.txt  honey_comb.txt  lamina_face.txt  mannequin_data.txt  pandemonium_gon.txt  pandora_gon.txt  parkour_a.txt  parkour_nonmani.txt  parkour_nonmani_b.txt  plane_nonmani_data.txt  tetrahedra.txt  tri_sphere.txt  tri_sphere_complete.txt  tri_sphere_indices.txt  u_gon.txt  vkeep_removed.txt  zero_gon.txt
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
examples/: CMakeLists.txt  main.cpp  obj_brep.h
examples/attributes/: attributes.cpp
examples/edge_edge_connect/: edge_edge_connect.cpp
examples/edge_insert_vert/: CMakeLists.txt  edge_insert_vert.cpp
examples/edge_lengths/: edge_lengths.cpp
examples/face_area/: face_area.cpp
examples/face_on_top/: face_on_top.cpp
examples/fan_triangulation/: fan_triangulation.cpp
examples/make_triangle/: make_triangle.cpp
examples/min_alloc/: min_alloc.cpp
examples/smooth_edges/: smooth_edges.cpp
examples/smooth_normals/: smooth_normals.cpp
src/include/GnMesh/Geom/: GnmEigen.PCH.hpp  GnmEigen.hpp  Matrices.hpp
src/include/GnMesh/IO/: GatherMayaData.hpp
src/include/GnMesh/Mesh/: BlockArrayConfig.hpp  BlockArrayKernel.hpp  Construct.hpp  Edit.hpp  Flags.hpp  GeomQueries.hpp  Handles.hpp  Items.hpp  Queries.hpp
src/include/GnMesh/Storage/: BlockArray.hpp  LinearBlockAlloc.hpp  StaticArray.hpp
src/include/GnMeshCommon/: Assert.hpp  BitArray.hpp  CodePos.hpp  IntTypes.hpp  IteratorTraits.hpp  MemberDetector.hpp  Namespace.hpp  RAII.hpp  Range.hpp  SmallVector.h  Specifiers.hpp  TParam.hpp  bitUtils.hpp
src/include/GnMeshCommon/Maya/: MayaCout.hpp
tests/: CMakeLists.txt  obj_brep.h  objio.h
tests/block-erase/: CMakeLists.txt  block-erase.cpp
tests/edge-collapse/: edge-collapse.cpp
tests/edge-construct/: edge-construct.cpp
